<resources>
    <string name="app_name">PopularMovies</string>
    <!--<string name="hello_world">Hello world!</string>-->
    <string name="action_settings">Settings</string>
    <string name="action_most_popular">Most popular</string>
    <string name="action_highest_rated">Highest rated</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_sort_options" translatable="false">MovieSortOptions</string>



    <string name="title_activity_popular_movies_detail">PopularMoviesDetailActivity</string>
    <string name="hello_world">Hello world!</string>


    <string name="action_share">Sort!</string>

    <string name="moviedb_image_url">http://image.tmdb.org/t/p/w185</string>

    <!--FAB labels-->
    <string name="fab_action_most_popular">Most popular</string>
    <string name="fab_action_highest_rated">Highest rated</string>
    <string name="fab_action_favorites">Favorite</string>

    <!--Detail movie form-->
    <string name="form_synopsis">Synopsis</string>
    <string name="form_release_date">Release date</string>
    <string name="form_rate">Rate</string>
    <string name="form_trailers">Trailers</string>
    <string name="form_reviews">Reviews</string>

</resources>